Move rule params from HTML to native components