@@ -40,21 +40,23 @@ public class RuleDescription {
   
   private final RuleType type;
   private final String html;
+  private final List<Param> params;
 
   public static RuleDescription from(String ruleKey, String name, IssueSeverity severity, RuleType type, String fullDescription) {
-    return from(ruleKey, name, severity, type, fullDescription, Collections.emptyList());
+    return from(ruleKey, name, severity, type, fullDescription, List.of());
   }
 
   public static RuleDescription from(String ruleKey, String name, IssueSeverity severity, RuleType type, @Nullable String fullDescription, List<Param> params) {
-    return new RuleDescription(ruleKey, name, severity, type, buildHtml(ruleKey, fullDescription, params));
+    return new RuleDescription(ruleKey, name, severity, type, fullDescription, params);
   }
 
-  private RuleDescription(String key, String name, IssueSeverity severity, RuleType type, String html) {
+  private RuleDescription(String key, String name, IssueSeverity severity, RuleType type, String html, List<Param> params) {
     this.key = key;
     this.name = name;
     this.severity = severity;
     this.type = type;
     this.html = html;
+    this.params = params;
   }
 
   public String getKey() {
@@ -73,46 +75,18 @@ public class RuleDescription {
     return type;
   }
 
+  public List<Param> getParams() {
+    return params;
+  }
+
   public String getHtml() {
     return html;
   }
 
-  private static String buildHtml(String ruleKey, @Nullable String fullDescription, List<Param> params) {
+  private static String buildHtml(String ruleKey, @Nullable String fullDescription) {
     var builder = new StringBuilder();
     builder.append(fullDescription);
-    if (!params.isEmpty()) {
-      builder.append(renderRuleParams(params, ruleKey));
-    }
     return builder.toString();
-  }
-
-  private static String renderRuleParams(List<Param> params, String ruleKey) {
-    return "<table class=\"rule-params\">" +
-      "<caption><h2>Parameters</h2></caption>" +
-      "<tr class='thead'>" +
-      "<td colspan=\"2\">" +
-      "Following parameter values can be set in <a href=\"#rule\">Rule Settings</a>. " +
-      "In connected mode, server side configuration overrides local settings." +
-      "</td>" +
-      "</tr>" +
-      params.stream().map(param -> renderRuleParam(param, ruleKey)).collect(Collectors.joining("\n")) +
-      "</table>";
-  }
-
-  private static String renderRuleParam(Param param, String ruleKey) {
-    var paramDescription = param.description != null ? ("<p>" + param.description + "</p>") : "";
-    var paramDefaultValue = param.defaultValue;
-    var defaultValue = paramDefaultValue != null ? paramDefaultValue : "(none)";
-    var currentValue = getGlobalSettings().getRuleParamValue(ruleKey, param.name).orElse(defaultValue);
-    return "<tr class='tbody'>" +
-    // The <br/> elements are added to simulate a "vertical-align: top" (not supported by Java 11 CSS renderer)
-      "<th>" + param.name + "<br/><br/></th>" +
-      "<td>" +
-      paramDescription +
-      "<p><small>Current value: <code>" + currentValue + "</code></small></p>" +
-      "<p><small>Default value: <code>" + defaultValue + "</code></small></p>" +
-      "</td>" +
-      "</tr>";
   }
 
   public static class Param {
@@ -124,6 +98,18 @@ public class RuleDescription {
       this.name = name;
       this.description = description;
       this.defaultValue = defaultValue;
+    }
+
+    public String getName() {
+      return name;
+    }
+
+    public String getDescription() {
+      return description;
+    }
+
+    public String getDefaultValue() {
+      return defaultValue;
     }
   }
 }
